game score added

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,10 @@
   <title>ShootBall</title>
 </head>
 <body>
+  <div class="score">
+    <span>Score: </span>
+    <span id="score">0</span>
+  </div>
   <canvas id="canvas"></canvas>
 </body>
 </html>
