game over ui added

--- a/src/template.html
+++ b/src/template.html
@@ -11,6 +11,13 @@
     <span>Score: </span>
     <span id="score">0</span>
   </div>
+  <div class="game-result">
+    <div class="game-result__inner">
+      <h1 class="game-result__score">0</h1>
+      <p>points</p>
+      <button class="game-result__btn">Start game</button>
+    </div>
+  </div>
   <canvas id="canvas"></canvas>
 </body>
 </html>
